# Wardex

./: .env.example  .gitignore  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURES.md  LICENSE  LICENSE.COMMERCIAL  Makefile  README.md  SECURITY.md  blueprint.md  build.rs  deny.toml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  lighthouserc.json  pa11yci.json
.github/workflows/: actionlint.yml  bench.yml  ci.yml  cross-browser.yml  mutation-testing.yml  pages.yml  release.yml  reproducibility.yml  secret-scan.yml  site-quality.yml  sync-homebrew-tap.yml  validate-apt-repository.yml  validate-homebrew-formula.yml
admin-console/: admin.css  admin.html  admin.html.bak  eslint.config.js  generate_admin.py  index.html  knip.json  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js
admin-console/e2e/: admin-console.spec.js  command-center.spec.js  investigation-hunt.spec.js  live-monitor-regression.spec.js  routed-workflows.spec.js  shell-fleet.spec.js  visual-regression.spec.js
admin-console/src/: App.css  App.jsx  api.contracts.ts  api.js  api.ts  hooks.jsx  main.jsx  safeStorage.js  safeStorage.ts
admin-console/test-support/: appVersion.js
bench-history/: data.js
benches/: pipeline.rs
deploy/: otlp.yaml  prometheus-rules.yml  wardex.service
deploy/grafana/: wardex-dashboard.json
deploy/homebrew/: render_formula.sh  wardex.rb
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
deploy/scripts/: backup.sh  postinstall-linux-package.sh  render_apt_repo.sh  restore.sh  wardex-backup.service  wardex-backup.timer
design/: Wardex Investigation Workbench.html
design/admin-console/: index.html
design/app/: atoms.jsx  data.js  icons.jsx  shell.jsx  tokens.css
docs/: ARCHITECTURE.md  ARCHITECTURE_CONTRACT_STATE_SPINE.md  COMPATIBILITY.md  COMPLIANCE.md  CONFIGURATION.md  COVERAGE_BASELINE.md  DEPLOYMENT_MODELS.md  DEPRECATION_POLICY.md  DESIGN_ADVERSARIAL_HARNESS.md  DESIGN_DIGITAL_TWIN.md  DESIGN_POLICY_COMPOSITION.md  DESIGN_POST_QUANTUM.md  DESIGN_SUPPLY_CHAIN.md  DESIGN_SWARM_PROTOCOL.md  DESIGN_TEMPORAL_LOGIC.md  DESIGN_WASM_EXTENSIONS.md  DEVELOPMENT_ARCHIVE.md  DISASTER_RECOVERY.md  EVALUATE_WARDEX.md  FEATURE_FLAGS.md  FEATURE_UI_COVERAGE.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  INSTALL_UPGRADE.md  OPERATE_WARDEX.md  PAPER_TARGETS.md  PRODUCTION_HARDENING.md  PRODUCT_WORKFLOW_METRICS_SPINE.md  PROJECT_BACKLOG.md  README.md  RELEASE_ACCEPTANCE.md  REPRODUCIBILITY.md  RESEARCH.md  RESEARCH_QUESTIONS_R26_R30.md  RESEARCH_QUESTIONS_R31_R35.md  RESEARCH_QUESTIONS_R36_R40.md  RESEARCH_TRACKS.md  ROADMAP_XDR_PROFESSIONAL.md  SCHEMA_LIFECYCLE.md  SDK_GUIDE.md  (+6 more)
docs/architecture/: contract_state_spine.json
docs/product/: workflow_metrics_spine.json
docs/runbooks/: HA_FAILOVER.md  README.md  command-center.md  deployment.md  installation.md  linux-agent.md  macos-agent.md  response-playbooks.md  siem-integrations.md  troubleshooting.md  windows-agent.md
examples/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: search_query.rs  secrets_expand.rs  sigma_import.rs
playwright-report/: index.html
release/v0.41.5/: SHA256SUMS.txt
rules/sigma/: authentication.yml  cloud.yml  defense_evasion.yml  endpoint.yml  exfiltration.yml  fileless_malware.yml  iot_ot.yml  network.yml  persistence.yml  supply_chain.yml
rules/yara/: community.json  malware.json
scripts/: build_changelog.py  build_local_release.sh  bump_version.py  changelog_reset_unreleased.py  check_architecture_guardrails.py  check_contract_parity 2.py  check_contract_parity.py  check_nav_race_guard.py  check_panic_policy.py  check_product_identity.py  check_product_workflow_metrics.py  check_release_facts.py  check_release_trust_gates.py  check_workspace_hygiene.py  detection_validation_packs.sh  evaluate_to_value.sh  generate_release_facts.py  performance_scale_baseline.sh  release_acceptance.sh  sign_notarize_macos_release.sh  smoke_release_artifact.ps1  smoke_release_artifact.sh  update_github_macos_signing_secrets.sh  validate_container_build_contract.sh  validate_docs_freshness.py  validate_release_docs 2.py  validate_release_docs.py  verify_published_release.py  verify_release_artifacts.py
sdk/: generate.sh
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_client.py  test_live_client.py
sdk/python/wardex/: __init__.py  client.py  exceptions.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
site/: 404.html  admin.css  admin.html  admin.js  api.html  app.js  architecture.html  changelog.html  checkout.html  comparison.html  donate.html  features.html  index.html  install.sh  integrations.html  pricing.html  resources.html  rules.html  sitemap.xml  status.html  styles.css
site/data/: release_facts.json  research_tracks.json  status.json
site/donate/: index.html
site/support/: index.html
src/: actions.rs  agent_client.rs  agent_lifecycle.rs  alert_analysis.rs  analyst.rs  api_analytics.rs  archival.rs  attestation.rs  audit.rs  auth.rs  auto_update.rs  backup.rs  baseline.rs  beacon.rs  benchmark.rs  billing.rs  campaign.rs  cert_monitor.rs  checkpoint.rs  cloud_inventory.rs  cluster.rs  collector.rs  collector_aws.rs  collector_azure.rs  collector_gcp.rs  collector_identity.rs  collector_linux.rs  collector_macos.rs  collector_windows.rs  compliance.rs  compliance_hipaa.rs  compliance_templates.rs  config.rs  config_drift.rs  container.rs  container_image.rs  correlation.rs  coverage_gap.rs  detection_efficacy.rs  detection_feedback.rs  (+134 more)
src/collection/: collector.rs  collector_aws.rs  (+9 more)
target-release-x86_64/: .rustc_info 2.json
tests/: api_agent_updates.rs  api_alerts_events.rs  api_chaos_misc.rs  api_core_detection_auth.rs  api_deployments_enterprise.rs  api_integration.rs  api_investigations.rs  api_platform_services.rs  api_remediation.rs  concurrent_smoke.rs  failed_auth_lockout.rs  live_test.py  verify_admin.py
xdr_ai_handoff_pack/: AGENTS.md  README.md
(+184 files in other folders)
