[package]
name = "wardex"
version = "0.39.1"
edition = "2024"
description = "Private-cloud XDR and SIEM platform with enterprise detection, response, and fleet operations"
license-file = "LICENSE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
aes-gcm = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tiny_http = { version = "0.12", features = [] }
rand = "0.8"
ureq = { version = "2", default-features = false, features = ["json"] }
ctrlc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
flate2 = "1"
log = "0.4"
env_logger = "0.11"

[features]
default = []
tls = ["tiny_http/ssl-rustls"]

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "pipeline"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"
