[package]
name = "wardex"
version = "0.44.0"
edition = "2024"
rust-version = "1.85.0"
build = "build.rs"
description = "Private-cloud XDR and SIEM platform with enterprise detection, response, and fleet operations"
license-file = "LICENSE"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
md5 = "0.7"
aes-gcm = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ureq = { version = "2", default-features = false, features = ["json"] }
ctrlc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
flate2 = "1"
log = "0.4"
env_logger = "0.11"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
include_dir = "0.7"
# Axum async HTTP server stack
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Full-text search
tantivy = "0.22"

[features]
default = []
tls = []

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "pipeline"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"
