[package]
name = "wardex"
version = "1.0.3"
edition = "2024"
rust-version = "1.88.0"
build = "build.rs"
description = "Private-cloud XDR and SIEM platform with enterprise detection, response, and fleet operations"
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.11"
md5 = "0.7"
aes-gcm = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ureq = { version = "2", default-features = false, features = ["json"] }
ctrlc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "8"
flate2 = "1"
log = "0.4"
env_logger = "0.11"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
include_dir = "0.7"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
# Axum async HTTP server stack
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "fs"] }
# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# Full-text search
tantivy = "0.22"

[features]
default = []
tls = ["ureq/tls"]

[lib]
# The crate currently has no Rust doctest examples, and `rustdoc --test`
# must compile the full monolithic library with all default features. Keep
# `cargo test --doc` reliable by avoiding that resource-heavy no-op pass.
doctest = false

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "pipeline"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
too_many_arguments = "allow"
type_complexity = "allow"
large_enum_variant = "allow"

[package.metadata.deb]
maintainer = "Wardex Team <support@wardex.dev>"
copyright = "2025, Wardex Team"
license-file = ["LICENSE", "0"]
extended-description = "Wardex XDR — AI-powered endpoint detection, response, fleet operations, and SIEM for private-cloud environments."
section = "net"
priority = "optional"
depends = "$auto"
assets = [
  ["target/release/wardex", "usr/bin/", "755"],
  ["examples/**/*", "usr/share/wardex/examples/", "644"],
  ["rules/**/*", "usr/share/wardex/rules/", "644"],
  ["site/**/*", "usr/share/wardex/site/", "644"],
  ["deploy/wardex.service", "lib/systemd/system/", "644"],
]
conf-files = ["/etc/wardex/wardex.toml"]
