[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wardex"
version = "1.0.5"
description = "Python SDK for the Wardex XDR / SIEM platform"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.9"
authors = [
    {name = "Wardex Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["wardex*"]
